--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,9 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  padding-top: 70px;
+  padding-bottom: 30px;
+  background-image: url(http://hdwallpapers2013.com/wp-content/uploads/2013/03/Sky-Wallpaper.jpg);
 }
 
 a {
