--- a/views/about/index.html
+++ b/views/about/index.html
@@ -3,6 +3,9 @@
 {% block content %}
     <div class="page-header">
         <h1>About</h1>
-        <p class="lead">(TODO: Provide a summary about streams. </p>
+        <p class="lead">My name is Edwin Chiu. I am a student at Brooklyn Technical High School.
+        This application that I created at New York on Tech allows people to search up certain
+        hashtags taken from Twitter and view all hashtags that was searched up. I hope that this will be of some use
+        to people who are searching up certain topics on the internet and needs an easier way to find them.</p>
     </div>
 {% endblock %}
