--- a/views/search/index.html
+++ b/views/search/index.html
@@ -3,6 +3,15 @@
 {% block content %}
 <div class="jumbotron">
     <h1>Search</h1>
-    <p>This is my search page.</p>
+    <p class="lead">Search for a hashtag</p>
+    
+    <form class="form-inline">
+        <div class="form-group">
+            <label class="sr-only" for="hashtag">Hashtag</label>
+            <input type="text" class="form-control" id="hashtag" placeholder="#nyc">
+        </div>
+        <button type="submit" class="btn bthn-default">Search</button>
+        </form>
+        
 </div>
 {% endblock %}
