--- a/views/search/index.html
+++ b/views/search/index.html
@@ -13,5 +13,11 @@
         <button type="submit" class="btn bthn-default">Search</button>
         </form>
         
+        <h4>Search Results</h4>
+        <div class="panel panel-default">
+            <div class="panel-body">
+                Basic Panel
+                </div>
+        </div>
 </div>
 {% endblock %}
