--- a/views/search/index.html
+++ b/views/search/index.html
@@ -2,75 +2,25 @@
 
 {% block content %}
 <div class="jumbotron">
-    <h1>Search</h1>
-    <p class="lead">Search for a hashtag</p>
-    <table class="table table-striped table-hover ">
-  <thead>
-    <tr>
-      <th>#</th>
-      <th>Column heading</th>
-      <th>Column heading</th>
-      <th>Column heading</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>1</td>
-      <td>Column content</td>
-      <td>Column content</td>
-      <td>Column content</td>
-    </tr>
-    <tr>
-      <td>2</td>
-      <td>Column content</td>
-      <td>Column content</td>
-      <td>Column content</td>
-    </tr>
-    <tr class="info">
-      <td>3</td>
-      <td>Column content</td>
-      <td>Column content</td>
-      <td>Column content</td>
-    </tr>
-    <tr class="success">
-      <td>4</td>
-      <td>Column content</td>
-      <td>Column content</td>
-      <td>Column content</td>
-    </tr>
-    <tr class="danger">
-      <td>5</td>
-      <td>Column content</td>
-      <td>Column content</td>
-      <td>Column content</td>
-    </tr>
-    <tr class="warning">
-      <td>6</td>
-      <td>Column content</td>
-      <td>Column content</td>
-      <td>Column content</td>
-    </tr>
-    <tr class="active">
-      <td>7</td>
-      <td>Column content</td>
-      <td>Column content</td>
-      <td>Column content</td>
-    </tr>
-  </tbody>
-</table> 
-    <form class="form-inline">
-        <div class="form-group">
-            <label class="sr-only" for="hashtag">Hashtag</label>
-            <input type="text" class="form-control" id="hashtag" placeholder="#nyc">
-        </div>
-        <button type="submit" class="btn bthn-default">Search</button>
-        </form>
-        
-        <h4>Search Results</h4>
-        <div class="panel panel-default">
-            <div class="panel-body">
-                Basic Panel
-                </div>
-        </div>
+     <p class="lead">Search for a hashtag</p>
+
+    <form class="form-inline" action="/search" method="post">
+      <div class="form-group">
+        <label class="sr-only" for="hashtag">Hashtag</label>
+        <input type="text" class="form-control" id="hashtag" name="hashtag" placeholder="#nyc, #Decision2016">
+      </div>
+      <button type="submit" class="btn btn-default">Search</button>
+    </form>
+</div>
+
+<h4>Search Results (172)</h4>
+<hr>
+
+<div class="container">
+  <div class="row tweets-container">
+    {% for i in range(0, 10) %}
+      {% include "search/_item.html" %}
+    {% endfor %}
+  </div>
 </div>
 {% endblock %}
