--- a/views/layouts/base.html
+++ b/views/layouts/base.html
@@ -13,5 +13,6 @@
   <script src="/javascripts/jquery-1.12.0.min.js"></script>
   <script src="/javascripts/bootstrap.min.js"></script>
   <script src="/javascripts/moment.min.js"></script>
+  <script src="/javascripts/masonry.pkgd.min.js"></script>
   <script src="/javascripts/app.js"></script>
 {% endblock %}
